{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "41a294ff-3a9e-48d5-8b4f-c9572a01f4cc",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c1e06241-2e93-4177-a708-ca09d6bec607",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextDialogue",
                    "type": "Button",
                    "id": "936af2f5-79fe-4a29-a74d-ae34077a4a73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6d47af8-306c-4081-a842-717793f4e3ed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fddc7c7a-5f2d-4e80-9969-0355ebe34389",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "NextDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}